fix combimation comparison